--- a/static/style.css
+++ b/static/style.css
@@ -33,3 +33,28 @@ nav {
 a:hover {
   background-color: color-mix(in oklch, var(--color-accent), canvas 85%);
 }
+
+nav {
+  display: flex;
+  border-bottom-width: 1px; 
+  border-bottom-style: solid;
+  border-bottom-color: oklch(80% 3% 200);
+}
+a {
+  flex: 1;
+  padding: 0.5em;
+  text-decoration: none;
+  color: inherit;
+  text-align: center;
+}
+a.current {
+  border-bottom-width: 5px; 
+  border-bottom-style: solid;
+  border-bottom-color: oklch(80% 3% 200);
+}
+a:hover {
+  border-bottom-width: 5px; 
+  border-bottom-style: solid;
+  accent-color: oklch(70% 0.1373 187.41);
+  border-bottom-color: oklch(70% 0.1373 187.41);
+}
