--- a/static/style.css
+++ b/static/style.css
@@ -1,9 +1,5 @@
 /* style.css */
 
-html {
-  color-scheme: light dark; /* Allow the site to adapt to light or dark mode */
-} */
-
 nav {
   --border-color: oklch(50% 10% 200 / 40%);
 }
@@ -51,4 +47,9 @@ a:hover {
   border-bottom-style: solid;
   accent-color: oklch(70% 0.1373 187.41);
   border-bottom-color: oklch(70% 0.1373 187.41);
+}
+
+.dark-mode {
+  background-color: #121212;
+  color: white;
 }
